--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "annankatu",
+  "name": "ruoholahdenkatu",
   "version": "0.0.0",
   "private": true,
-  "author": "Andre Staltz",
+  "author": "Olavi Haapala",
   "dependencies": {
     "cyclejs": "0.16.0",
     "immutable": "^3.6.4",
